--- a/workbook2.ipynb
+++ b/workbook2.ipynb
@@ -199,13 +199,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#A1 your code here\n",
     "#part 1 is already done for you\n",
-    "credits = pd.read_csv('credits.csv')"
+    "credits = pd.read_csv('credits.csv')\n",
+    "cols = credits.sql(\"\"\"SELECT FIRST(name), Count() as CountRoles,\n",
+    "    FROM credits\n",
+    "    GROUP BY person_id\n",
+    "    ORDER BY CountRoles DESC\"\"\").df()\"\n",
+    "cols.head()"
    ]
   },
   {
